[gd_scene load_steps=10 format=2]

[ext_resource path="res://scenes/InfoScreen.gd" type="Script" id=1]
[ext_resource path="res://dodge_assets/art/buy-santa-hats-on-hats.png" type="Texture" id=2]
[ext_resource path="res://dodge_assets/art/buy-hats-on-hats-on-hats.png" type="Texture" id=3]
[ext_resource path="res://dodge_assets/art/buy-check.png" type="Texture" id=4]

[sub_resource type="DynamicFontData" id=5]
font_path = "res://dodge_assets/fonts/Xolonium-Regular.ttf"

[sub_resource type="DynamicFont" id=6]
size = 30
font_data = SubResource( 5 )

[sub_resource type="StyleBoxFlat" id=7]
bg_color = Color( 1, 0.727833, 0.29, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0.72549, 0.462745, 0.215686, 1 )
border_blend = true
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20
shadow_size = 3
shadow_offset = Vector2( 2, 2 )

[sub_resource type="StyleBoxFlat" id=8]
bg_color = Color( 0.0901961, 0.145098, 0.25098, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0.72549, 0.462745, 0.215686, 1 )
border_blend = true
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20
shadow_size = 3
shadow_offset = Vector2( 2, 2 )

[sub_resource type="StyleBoxFlat" id=9]
bg_color = Color( 0.996078, 0.803922, 0.490196, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0.72549, 0.462745, 0.215686, 1 )
border_blend = true
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20
shadow_size = 3
shadow_offset = Vector2( 2, 2 )

[node name="InfoScreen" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="Control" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Exit" type="Button" parent="Control"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -61.0
margin_top = 36.0
margin_right = -16.0
margin_bottom = 77.0
rect_pivot_offset = Vector2( 153.5, 56 )
custom_colors/font_color = Color( 0.0901961, 0.145098, 0.25098, 1 )
custom_fonts/font = SubResource( 6 )
custom_styles/hover = SubResource( 7 )
custom_styles/pressed = SubResource( 8 )
custom_styles/normal = SubResource( 9 )
shortcut_in_tooltip = false
text = "X"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="InfoButton2" type="Button" parent="Control"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -156.5
margin_top = -73.0
margin_right = 156.5
margin_bottom = -32.0
rect_pivot_offset = Vector2( 153.5, 56 )
custom_colors/font_color = Color( 0.0901961, 0.145098, 0.25098, 1 )
custom_fonts/font = SubResource( 6 )
custom_styles/hover = SubResource( 7 )
custom_styles/pressed = SubResource( 8 )
custom_styles/normal = SubResource( 9 )
shortcut_in_tooltip = false
text = " View Source Code "
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Buy1" type="Button" parent="Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -194.0
margin_top = -204.0
margin_right = 201.0
margin_bottom = -27.0
rect_pivot_offset = Vector2( 153.5, 56 )
custom_colors/font_color = Color( 0.0901961, 0.145098, 0.25098, 1 )
custom_fonts/font = SubResource( 6 )
custom_styles/hover = SubResource( 7 )
custom_styles/pressed = SubResource( 8 )
custom_styles/normal = SubResource( 9 )
shortcut_in_tooltip = false
text = "   "
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Bg" type="TextureRect" parent="Control/Buy1"]
margin_right = 40.0
margin_bottom = 40.0
rect_scale = Vector2( 0.55, 0.55 )
texture = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Check" type="TextureRect" parent="Control/Buy1"]
margin_left = 320.0
margin_top = 104.0
margin_right = 576.0
margin_bottom = 360.0
rect_scale = Vector2( 0.25, 0.25 )
texture = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Buy2" type="Button" parent="Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -194.0
margin_top = 28.0
margin_right = 201.0
margin_bottom = 205.0
rect_pivot_offset = Vector2( 153.5, 56 )
custom_colors/font_color = Color( 0.0901961, 0.145098, 0.25098, 1 )
custom_fonts/font = SubResource( 6 )
custom_styles/hover = SubResource( 7 )
custom_styles/pressed = SubResource( 8 )
custom_styles/normal = SubResource( 9 )
shortcut_in_tooltip = false
text = "   "
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Bg" type="TextureRect" parent="Control/Buy2"]
margin_right = 40.0
margin_bottom = 40.0
rect_scale = Vector2( 0.55, 0.55 )
texture = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Check" type="TextureRect" parent="Control/Buy2"]
margin_left = 320.0
margin_top = 104.0
margin_right = 576.0
margin_bottom = 360.0
rect_scale = Vector2( 0.25, 0.25 )
texture = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Control"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -102.0
margin_bottom = -88.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Dodge Them Turkeys! is an open source game"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="Control/Exit" to="." method="_on_Exit_pressed"]
[connection signal="pressed" from="Control/InfoButton2" to="." method="_on_InfoButton2_pressed"]
[connection signal="pressed" from="Control/Buy1" to="." method="_on_Buy1_pressed"]
[connection signal="pressed" from="Control/Buy2" to="." method="_on_Buy2_pressed"]
